--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
+      name: 'setup node'
+      with:
+        node-version: '13.x'
 
+    - name: 'install'
+      run: npm i
     - name: 'test'
       run: npm run test
